--- a/app/src/main/res/layout/note_list_layout.xml
+++ b/app/src/main/res/layout/note_list_layout.xml
@@ -30,25 +30,25 @@
                 style="@style/Theme.TouchNotes.Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:ellipsize="end"
-                android:maxLines="1"
+                android:maxLines="2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.051"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="A visit to the zoo dsfsfsdfsdfsdfsdfsdfssdfsdfsdfsdf" />
+                tools:text="A visit to the zoo dsfsfs dfsdfsdfsdfsdfs sdfsdfsdfsdf sdfsfsfdf" />
 
             <TextView
                 android:id="@+id/textBody"
                 style="@style/Theme.TouchNotes.Body"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginEnd="18dp"
                 android:layout_marginBottom="6dp"
                 android:ellipsize="end"
-                android:maxLines="5"
+                android:maxLines="6"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/textTitle"
