--- a/app/src/main/res/menu/note_edit_menu.xml
+++ b/app/src/main/res/menu/note_edit_menu.xml
@@ -2,8 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:title="@string/save"
-        android:id="@+id/saveNote"
+    <item
+        android:id="@+id/actionSave"
         android:icon="@drawable/ic_baseline_save_alt_24"
-        app:showAsAction="ifRoom"/>
+        android:title="@string/save"
+        app:showAsAction="ifRoom|withText" />
+    <item
+        android:id="@+id/actionDelete"
+        android:icon="@drawable/ic_delete_24"
+        android:title="Delete"
+        app:showAsAction="ifRoom|withText" />
 </menu>
