--- a/app/src/main/res/menu/note_edit_menu.xml
+++ b/app/src/main/res/menu/note_edit_menu.xml
@@ -10,6 +10,11 @@
     <item
         android:id="@+id/actionDelete"
         android:icon="@drawable/ic_delete_24"
-        android:title="Delete"
+        android:title="@string/delete"
+        app:showAsAction="ifRoom|withText" />
+    <item
+        android:id="@+id/actionShare"
+        android:icon="@drawable/ic_share"
+        android:title="@string/share"
         app:showAsAction="ifRoom|withText" />
 </menu>
