--- a/app/src/main/res/layout/fragment_note_edit.xml
+++ b/app/src/main/res/layout/fragment_note_edit.xml
@@ -10,7 +10,8 @@
         android:id="@+id/noteTitle"
         style="@style/Theme.TouchNotes.EditTitle"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
+        android:minHeight="50dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="4dp"
@@ -18,7 +19,7 @@
         android:gravity="center|fill_horizontal"
         android:hint="@string/note_title"
         android:padding="5dp"
-        android:inputType="text"
+        android:inputType="textMultiLine"
         android:importantForAutofill="no"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
