--- a/app/src/main/res/layout/note_list_layout.xml
+++ b/app/src/main/res/layout/note_list_layout.xml
@@ -23,7 +23,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:padding="5dp">
 
             <TextView
                 android:id="@+id/textTitle"
@@ -45,7 +46,6 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginEnd="18dp"
                 android:layout_marginBottom="6dp"
                 android:ellipsize="end"
                 android:maxLines="6"
