--- a/app/src/main/res/navigation/base_graph.xml
+++ b/app/src/main/res/navigation/base_graph.xml
@@ -13,9 +13,10 @@
         <action
             android:id="@+id/action_list_edit"
             app:destination="@id/noteEditFragment"
-            app:enterAnim="@android:anim/slide_in_left"
-            app:exitAnim="@android:anim/slide_out_right" >
-        </action>
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/to_right"
+            app:popEnterAnim="@anim/from_right"
+            app:popExitAnim="@anim/to_left" />
     </fragment>
     <fragment
         android:id="@+id/noteEditFragment"
@@ -24,8 +25,7 @@
         tools:layout="@layout/fragment_note_edit" >
         <action
             android:id="@+id/action_edit_list"
-            app:destination="@id/noteListFragment"
-            app:popUpTo="@id/noteListFragment" />
+            app:destination="@id/noteListFragment" />
         <argument
             android:name="note"
             app:argType="com.koc.touchnotes.model.Note"
