--- a/app/src/main/res/layout/note_list.xml
+++ b/app/src/main/res/layout/note_list.xml
@@ -28,6 +28,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/header"/>
+    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:textColor="@color/textColors"
+        android:textStyle="bold"
+        android:layout_below="@id/header"
+        android:layout_centerInParent="true"
+        android:text="@string/empty_add_notes"
+        android:textSize="20sp" />
 
 
 
