--- a/app/src/main/res/xml/note_list_info.xml
+++ b/app/src/main/res/xml/note_list_info.xml
@@ -6,5 +6,5 @@
     android:minHeight="180dp"
     android:previewImage="@drawable/example_appwidget_preview"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="86400000"
-    android:widgetCategory="home_screen"></appwidget-provider>
+    android:updatePeriodMillis="1800000"
+    android:widgetCategory="home_screen" />
