--- a/app/src/main/res/layout/fragment_note_edit.xml
+++ b/app/src/main/res/layout/fragment_note_edit.xml
@@ -26,7 +26,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Note Title" />
 
-    <EditText
+    <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/noteBody"
         style="@style/Theme.TouchNotes.EditBody"
         android:layout_width="0dp"
