Update note edit ui

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,7 +20,7 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <!--  NOTE TITLE STYLING  -->
+    <!--  NOTE TITLE LIST STYLING  -->
     <style name="Theme.TouchNotes.Title">
         <item name="fontFamily">Roboto</item>
         <item name="android:textSize">20sp</item>
@@ -39,7 +39,9 @@
     <!--  Note title  -->
     <style name="Theme.TouchNotes.EditTitle">
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">35sp</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:textColorHint">@color/textColors</item>
     </style>
 
     <!-- Note Content -->
