--- a/app/src/main/res/layout/fragment_note_edit.xml
+++ b/app/src/main/res/layout/fragment_note_edit.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.NoteEditFragment">
+    tools:context=".view.NoteEditFragment"
+    android:padding="5dp">
 
     <EditText
         android:id="@+id/noteTitle"
@@ -17,7 +18,6 @@
         android:layout_marginEnd="4dp"
         android:gravity="center|fill_horizontal"
         android:hint="@string/note_title"
-        android:padding="5dp"
         android:inputType="textMultiLine"
         android:importantForAutofill="no"
         app:backgroundTint="@color/teal_200"
