--- a/app/src/main/res/menu/note_list_menu.xml
+++ b/app/src/main/res/menu/note_list_menu.xml
@@ -30,4 +30,10 @@
         </menu>
 
     </item>
+
+    <item
+        android:id="@+id/actionChangeLayout"
+        android:title="@string/list_style"
+        android:icon="@drawable/ic_list"
+        app:showAsAction="always"/>
 </menu>
