Update navGraph to contain settings screen
Update to commit
----------------
Changed the id for navigatiom from settings
fragment to the note list fragment and vice
versa.

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -8,4 +8,8 @@
             app:title="Theme"
             app:useSimpleSummaryProvider="true" />
 
+        <Preference
+                app:title="Buid version"
+                app:summary="v1.0"/>
+
 </PreferenceScreen>
