--- a/app/src/main/res/menu/note_list_menu.xml
+++ b/app/src/main/res/menu/note_list_menu.xml
@@ -36,4 +36,11 @@
         android:title="@string/list_style"
         android:icon="@drawable/ic_list"
         app:showAsAction="always"/>
+
+    <item
+        android:id="@+id/actionSettings"
+        android:title="@string/settings"
+        android:icon="@drawable/ic_settings"
+        app:showAsAction="never"/>
+
 </menu>
