--- a/app/src/main/res/menu/note_list_menu.xml
+++ b/app/src/main/res/menu/note_list_menu.xml
@@ -12,7 +12,7 @@
     <item
         android:icon="@drawable/ic_sort"
         android:title="@string/sort"
-        app:showAsAction="always">
+        app:showAsAction="ifRoom">
 
         <menu>
             <item
