--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -7,8 +7,8 @@
     </string-array>
 
     <string-array name="theme_values">
-        <item>system_default</item>
-        <item>light_theme</item>
-        <item>dark_theme</item>
+        <item>@string/system_default_theme</item>
+        <item>@string/light_theme</item>
+        <item>@string/dark_theme</item>
     </string-array>
 </resources>
