--- a/app/src/main/res/layout-night/activity_main.xml
+++ b/app/src/main/res/layout-night/activity_main.xml
@@ -10,12 +10,12 @@
         android:id="@+id/mainToolbar"
         android:layout_width="match_parent"
         android:layout_height="?android:actionBarSize"
-        android:background="@android:color/white"
+        android:background="#000000"
+        android:elevation="7dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:titleTextColor="@color/teal_200"
-        android:elevation="7dp"/>
+        app:titleTextColor="@color/teal_200" />
 
     <fragment
         android:id="@+id/fragment"
