--- a/app/src/main/res/menu/note_edit_menu.xml
+++ b/app/src/main/res/menu/note_edit_menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/actionSave"
-        android:icon="@drawable/ic_baseline_save_alt_24"
+        android:icon="@drawable/ic_save"
         android:title="@string/save"
         app:showAsAction="ifRoom|withText" />
     <item
