--- a/app/src/main/res/layout/fragment_note_edit.xml
+++ b/app/src/main/res/layout/fragment_note_edit.xml
@@ -4,42 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.NoteEditFragment"
-    android:padding="5dp">
+    android:padding="5dp"
+    tools:context=".view.NoteEditFragment">
 
-    <EditText
+    <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/noteTitle"
         style="@style/Theme.TouchNotes.EditTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:minHeight="50dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="4dp"
         android:gravity="center|fill_horizontal"
         android:hint="@string/note_title"
-        android:inputType="textMultiLine"
         android:importantForAutofill="no"
+        android:inputType="textMultiLine"
+        android:minHeight="50dp"
         app:backgroundTint="@color/teal_200"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Note Title" />
 
-    <EditText
+    <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/noteBody"
         style="@style/Theme.TouchNotes.EditBody"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="4dp"
-        android:background="@drawable/note_body"
-        android:ems="10"
-        android:gravity="start|top"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:hint="@string/note_content"
         android:importantForAutofill="no"
         android:inputType="textMultiLine"
         android:padding="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@null"
         app:layout_constraintEnd_toEndOf="@+id/noteTitle"
         app:layout_constraintStart_toStartOf="@+id/noteTitle"
         app:layout_constraintTop_toBottomOf="@+id/noteTitle" />
