--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -41,7 +41,7 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">35sp</item>
         <item name="android:padding">10dp</item>
-        <item name="android:textColorHint">@color/textColors</item>
+        <item name="android:textColorHint">@color/textHintColor</item>
     </style>
 
     <!-- Note Content -->
