--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,19 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    <group android:scaleX="0.2109375"
+        android:scaleY="0.2109375">
+        <group>
+            <clip-path
+                android:pathData="M0,0h512v512h-512z"/>
+            <path
+                android:pathData="M0,0h512v512h-512z"
+                android:fillColor="#000040F1"/>
+            <path
+                android:pathData="M342.07,178.676q-3.671,27.213 -23.163,27.213 -6.835,0 -26.2,-6.139T259.291,193.611c-12.067,0 -23.585,-22.63 -32.4,-13.67S214.737,223.829 214.737,230.506q0,9.764 12.151,17.37c3.291,2.114 -12.657,-1.69 -12.657,0 0,2.282 15.252,11.073 10.569,14.961s-8.206,5.832 -10.569,5.832q-5.949,0 -11.139,-6.835a24.167,24.167 0,0 1,-5.19 -14.936q0,-15.7 12.784,-34.238c8.523,-12.362 7.13,-44.92 20.885,-52.725s40.715,10.766 55.819,10.766a89.924,89.924 0,0 1,28.985 4.62q13.67,4.62 17.087,4.62a7.9,7.9 0,0 0,5.19 -1.772l0.759,-0.253ZM294.605,217.534q4.936,0 4.936,3.164l-3.038,16.834L280.935,268.67c-0.422,10.21 12.953,19.746 10.252,28.353a82.79,82.79 0,0 1,-10.252 21.9,72.138 72.138,0 0,1 -14.3,16.075A80.75,80.75 0,0 1,249.671 345.88a83.05,83.05 0,0 1,-18.1 6.076A77.643,77.643 0,0 1,213.976 353.981q-20.632,0 -32.34,-8.923T169.929,327.78q0,-4.81 8.67,-12.4t13.1,-7.594q5.443,0 5.443,10.126 0,16.455 5.379,21.328t14.366,4.873a38.343,38.343 0,0 0,25.5 -9.24A45.333,45.333 0,0 0,257.139 312.781q3.8,-12.847 3.924,-37.909t3.734,-34.491q3.607,-9.43 13.227,-16.138T294.605,217.534Z"
+                android:fillColor="#fff"/>
+        </group>
+    </group>
 </vector>
