Change title on settings fragment

--- a/app/src/main/res/navigation/base_graph.xml
+++ b/app/src/main/res/navigation/base_graph.xml
@@ -38,7 +38,7 @@
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.koc.touchnotes.view.SettingsFragment"
-        android:label="SettingsFragment" >
+        android:label="Settings" >
         <action
             android:id="@+id/action_settings_list"
             app:destination="@id/noteListFragment" />
