--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,9 +1,9 @@
 <resources>
     <!-- Reply Preference -->
     <string-array name="theme_entries">
-        <item>Use system default</item>
-        <item>Light</item>
-        <item>Dark</item>
+        <item>@string/use_system_default_text</item>
+        <item>@string/light_theme_text</item>
+        <item>@string/dark_theme_text</item>
     </string-array>
 
     <string-array name="theme_values">
