--- a/app/src/main/res/layout-night/note_list_layout.xml
+++ b/app/src/main/res/layout-night/note_list_layout.xml
@@ -8,6 +8,7 @@
     app:cardCornerRadius="5dp"
     android:layout_margin="8dp"
     android:layout_width="wrap_content"
+    android:minWidth="600dp"
     android:layout_height="wrap_content">
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -34,6 +35,7 @@
             android:maxLines="5"
             style="@style/Theme.TouchNotes.Body"
             tools:text="Boisterous he on understood attachment as entreaties ye devonshire. In mile an form snug were been sell. Hastened admitted joy nor absolute gay its. Extremely ham any his departure for contained curiosity defective. Way now instrument had eat diminution melancholy expression sentiments stimulated. One built fat you out manor books. Mrs interested now his affronting inquietude contrasted cultivated. Lasting showing expense greater on colonel no. " />
+
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 </com.google.android.material.card.MaterialCardView>
