--- a/app/src/main/res/layout/note_list_layout.xml
+++ b/app/src/main/res/layout/note_list_layout.xml
@@ -8,6 +8,7 @@
     app:cardCornerRadius="5dp"
     android:layout_margin="8dp"
     android:layout_width="wrap_content"
+    android:minWidth="600dp"
     android:layout_height="wrap_content">
 
     <androidx.appcompat.widget.LinearLayoutCompat
