--- a/app/src/main/res/menu/note_edit_menu.xml
+++ b/app/src/main/res/menu/note_edit_menu.xml
@@ -17,4 +17,8 @@
         android:icon="@drawable/ic_share"
         android:title="@string/share"
         app:showAsAction="ifRoom|withText" />
+    <item
+        android:id="@+id/actionGeneratePDF"
+        android:title="@string/generate_pdf"
+        app:showAsAction="ifRoom"/>
 </menu>
