Define filePath.xml

--- a/app/src/main/res/xml/filePaths.xml
+++ b/app/src/main/res/xml/filePaths.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<file_paths xmlns:android="http://schemas.android.com/apk/res/android">
-
-</file_paths>
+<paths>
+    <files-path
+        name="pdf"
+        path="pdf/" />
+</paths>
