--- a/app/src/main/res/layout/fragment_note_list.xml
+++ b/app/src/main/res/layout/fragment_note_list.xml
@@ -6,18 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".view.NoteListFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/itemsNotes"
+    <ViewStub
+        android:id="@+id/itemsNotesStub"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:inflatedId="@+id/itemsNotes"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layoutAnimation="@anim/recycler_item_anim"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/note_list_layout" />
+        />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAdd"
