--- a/app/src/main/res/layout/fragment_note_list.xml
+++ b/app/src/main/res/layout/fragment_note_list.xml
@@ -33,13 +33,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <ImageView
-        android:id="@+id/ivEmpty"
+    <ViewStub
+        android:id="@+id/ivEmptyStub"
+        android:inflatedId="@+id/ivEmpty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/no_note_saved_note"
-        android:src="@drawable/ic_empty"
-        android:visibility="invisible"
+        android:layout="@layout/iv_empty"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
