--- a/app/src/main/res/layout/fragment_note_list.xml
+++ b/app/src/main/res/layout/fragment_note_list.xml
@@ -45,17 +45,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.425" />
 
-    <TextView
-        android:id="@+id/tvEmpty"
-        style="@style/Theme.TouchNotes.Title"
+    <ViewStub
+        android:id="@+id/tvEmptyStub"
+        android:inflatedId="@+id/tvEmpty"
+        android:layout="@layout/tv_empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="@string/added_notes_appear_here"
-        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivEmpty" />
+        app:layout_constraintTop_toBottomOf="@id/ivEmptyStub" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
